[package]
name = "zero"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "zero"
path = "src/main.rs"

[dependencies]
rppal = "0.22.1"
surrealdb = "2.3.2"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
chrono = "0.4.41"